inclusao de tema para a tela ficar preta

--- a/OLX/pom.xml
+++ b/OLX/pom.xml
@@ -3,4 +3,11 @@
   <groupId>com.grande.volume.dados</groupId>
   <artifactId>OLX</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.jtattoo</groupId>
+  		<artifactId>JTattoo</artifactId>
+  		<version>1.6.11</version>
+  	</dependency>
+  </dependencies>
 </project>
