--- a/LeaoVerdi/pom.xml
+++ b/LeaoVerdi/pom.xml
@@ -6,8 +6,27 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
-		
 
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.14</version>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.37</version>
+		</dependency>
+
+
+
+		<dependency>
+			<!-- jsoup HTML parser library @ http://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+		</dependency>
 
 	</dependencies>
 </project>
